# xhls-utils

./: CMakeLists.txt  README.md  mpsoc.cmake
cmake/Modules/: FindRPCLIB.cmake  FindTurboJPEG.cmake  FindUIO.cmake  FindVISCA.cmake  FindYUV.cmake
hardware/: xhls_image_filter_vdma.cpp  xhls_image_filter_vdma.h  xlnx_udmabuf.cpp  xlnx_udmabuf.h  xlnx_vdma_loop.cpp  xlnx_vdma_loop.h
hardware/regctl/: xhls_image_filter_regctl.cpp  xhls_image_filter_regctl.h  xhls_reg_common.h  xlnx_vdma_regctl.cpp  xlnx_vdma_regctl.h
include/: CMakeLists.txt  xhls_image_filter_vdma.h  xlnx_udmabuf.h  xlnx_vdma_loop.h
samples/: CMakeLists.txt  image_filter_vdma_demo.cpp  vdma_loop_demo.cpp
src/: CMakeLists.txt  xhls_image_filter_vdma.cpp  xlnx_vdma_loop.cpp
src/regctl/: xhls_image_filter_hw.h  xhls_image_filter_regctl.cpp  xhls_image_filter_regctl.h  xhls_reg_common.h  xlnx_vdma_regctl.cpp  xlnx_vdma_regctl.h
tools/: vdma_loop_demo.cpp
